# sqlite-shortid

./: Cargo.toml  LICENSE  README.md  RELEASE_PROCESS.md  sqlpkg.json  test.sql
src/: lib.rs
